# rules_android

examples/basicapp/: MODULE.bazel  maven_install.json
examples/basicapp/java/com/basicapp/: BUILD  BasicActivityTest.java
