module(
    name = "basicapp",
)

bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")

bazel_dep(
    name = "rules_android",
    version = "0.6.0",
)

local_path_override(
    module_name = "rules_android",
    path = "../../",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")


bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.robolectric:robolectric:4.10.3",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
        "https://maven.google.com",
    ],
    lock_file = "//:maven_install.json"
)
use_repo(maven, "maven")
